# aoc

./: .gitignore  Cargo.toml  LICENSE  README.md  data_downloader.sh  run.py
src/: aoc_2015.rs  aoc_2021.rs  lib.rs  main.rs  parsers.rs  prelude.rs
src/aoc_2015/: day1.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day2.rs  day22.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs  mod.rs
src/aoc_2021/: day1.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs
src/aoc_2022/: day1.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs  mod.rs
tests/: qa.sqlite
